objects/Membership_Key_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Institution__c</fullName>
        <description>Created for CR-20160526-9880.</description>
        <formula>HYPERLINK(&quot;/&quot;+ Contact__r.AccountId , Contact__r.Account.Name )</formula>
        <label>Contact - Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Created for CR-20160526-9880.</description>
        <formula>Text(Contact__r.Contact_Status__c)</formula>
        <label>Contact - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Membership Key Contacts</relationshipLabel>
        <relationshipName>Membership_Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Metro_Role__c</fullName>
        <label>Legacy Metro Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meetings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Membership Key Contacts</relationshipLabel>
        <relationshipName>Membership_Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Technology__c</fullName>
        <description>CR-3838</description>
        <label>Performance Technology</label>
        <picklist>
            <picklistValues>
                <fullName>ASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iFormBuilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iRound (mobile app)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iRound IQ (dashboard)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pubs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pubs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of CR-3833</description>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>CIH programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCIC programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Ed Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Research Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iRound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD Programs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <controllingField>Role_Type__c</controllingField>
            <picklistValues>
                <fullName>Key Contact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Implementation Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Procurement Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Expert – HCAHPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Expert – Census</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAN Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Executive sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-All Meetings and Pubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Terrain Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Cancer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Clinical Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Clinician Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Imaging and Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Knowledge Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH-Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Profile_Status__c</fullName>
        <description>Created for CR-20160526-9880.</description>
        <formula>Text(Contact__r.Advisory_com_Site_Profile__r.Status__c )</formula>
        <label>Site Profile - Status</label>
        <type>Text</type>
    </fields>
    <label>Membership Key Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Membership Key Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Key Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>